# genilib

./: .gitignore  README.rst  lint.sh  pylint.rc  pyproject.toml  setup.py
ccloud/: __init__.py  endpoints.py
ccloud/api/: g5k.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  geniminigcfconfig.rst  geniportal.rst  genitypes.rst  geniurn.rst  geniutil.rst
docs/source/dev/: codingstandards.rst  index.rst  usecasenotes.rst
docs/source/examples/: index.rst
docs/source/intro/: centos7.rst  credentials.rst  install.rst  intro.rst  macosx.rst  ubuntu.rst  ubuntu16.rst  vagrant.rst  windows.rst
docs/source/tutorials/: cloudlabcontext.rst  createcontext.rst  federationquery.rst  gettingresources.rst  index.rst  makingslices.rst  portalcontext.rst  projectmanagement.rst  simplevts.rst  singlevm.rst  wanvts.rst
geni/: _coreutil.py  constants.py  exceptions.py  namespaces.py  portal.py  tempfile.py  types.py  urn.py  util.py  warnings.py
geni/admin/: flowvisor.py  foam.py  germ.py  oess.py  vts.py
geni/aggregate/: __init__.py  amtypes.py  apis.py  apt.py  cloudlab.py  context.py  core.py  core_openflow.py  exceptions.py  exogeni.py  frameworks.py  instageni.py  instageni_openflow.py  opengeni.py  pgutil.py  protogeni.py  spec.py  transit.py  user.py  vts.py
geni/minigcf/: amapi2.py  amapi3.py  chapi2.py  config.py  pgch1.py  util.py
geni/model/: base.py  compute.py  util.py
geni/rspec/: __init__.py  base.py  egext.py  igext.py  igutil.py  oessad.py  ofad.py  ofrequest.py  pg.py  pgad.py  pgmanifest.py  stitching.py  vts.py  vtsad.py  vtsmanifest.py
geni/rspec/emulab/: __init__.py  emuext.py  enodeb.py  epcexc.py  epclan.py  epcnode.py  pndefs.py  pnext.py  ue.py  (+2 more)
geni/support/: ipython.py
geni_tools/buildcontext/: build_context.py
geni_tools/scaleup/: rspec_gen.py
geni_tools/shell/: genish.py
samples/: 2-vm-2-host.py  2-vm-stitched.py  3-all-sites.py  asymmetric-lan.py  asymmetric-link.py  bound_vms.py  bridgedlink.py  checkavail.py  checkvmavail.py  dac.py  example-config.json  example_config.py  geebuild.py  getads.py  gpo-rebuild.py  local-blockstore.py  newoepc.py  onexen.py  ovs-3-vm.py  pollmax.py  portal-context.py  ps103.py  ps103.xml  pwe-bbn-test.py  pwe-build.py  pwe-raw.py  raw-build-gpo.py  rawpc3intf.py  ssh-fingerprints.py  stub-stitch.py  tour.py  userdata.py  vts-demo.py  vts-mesh.py  vts-options.py  vts-wan.py  vtsvpn.py
support/: Getting Started.ipynb  Vagrantfile-lab  Vagrantfile-lite  envsetup.bat  gateone.conf  jupyter-systemd  jupyter-upstart  rtd-requirements.txt
tools/buildcontext/: build-context  context-from-bundle  context_from_bundle.py
tools/ipython/: genish.py
tools/scaleup/: readme.txt  site_info.py  topo_gen.py
tools/shell/: genish
(+47 files in other folders)
